   arguments are not found or if sending the signal fails.

i. Fixed a bug that caused an invalid brace sequence expression to mess up
   expansion of an enclosing brace expansion.

j. Fixed a bug in command printing that output the wrong default file
   descriptor for the <> redirection.

k. User-specified subshells (`(...)') now update BASH_COMMAND in the subshell.

l. Fixed a bug with the `help -m' and loadable builtins.

m. Fixed a potential file descriptor leak when trying to use a pipe for a
   here document.

2. Changes to Readline

a. Fixed a bug that allowed a history search to change the current history
   list position.

b. Fixed a bug that allowed ^G to retain a saved command to execute.

c. Updates to new export-completions command to allow filename suffixes.

d. Fixed a redisplay bug with prompts containing multiple sequences of
   invisible characters that are longer than the screen width.

3. New Features in Bash

a. There is a new `fltexpr' builtin to perform floating-point arithmetic
   similarly to `let'.

4. New Features in Readline

a. Readline can reset its idea of the screen dimensions when executing after
   a SIGCONT.

------------------------------------------------------------------------------
This document details the changes between this version, bash-5.3-beta, and
the previous version, bash-5.3-alpha.

1. Changes to Bash

a. Per POSIX, a null pathname argument to `cd' is now an error.

b. Fixes for command completion when the directory portion of the pathname
   contains characters that require quoting.

c. Fix to prevent redirections from undergoing word expansion twice.

d. Fix for rare parsing issue with for loops where a newline appears before
   `in'.

e. The bash build process now assumes a C90 compilation environment and a
   POSIX.1-1990 execution environment.

f. Fixed a bug where bash's internal redirection flags could collide with
   the system's open/fcntl flags.
