@@ -45,7 +45,7 @@ typedef int hash_wfunc (BUCKET_CONTENTS *);
 
 /* Operations on tables as a whole */
 extern HASH_TABLE *hash_create (int);
-extern HASH_TABLE *hash_copy (HASH_TABLE *, sh_string_func_t *);
+extern HASH_TABLE *hash_copy (HASH_TABLE *, sh_copy_func_t *);
 extern void hash_flush (HASH_TABLE *, sh_free_func_t *);
 extern void hash_dispose (HASH_TABLE *);
 extern void hash_walk (HASH_TABLE *, hash_wfunc *);
