@@ -1,4 +1,4 @@
-: ${BUILD_DIR:==/usr/local/build/bash/bash-current}
+: ${BUILD_DIR:=/usr/local/build/bash/bash-current}
 THIS_SH=$BUILD_DIR/bash
 PATH=$PATH:$BUILD_DIR
 
