@@ -426,7 +426,7 @@ SEE ALSO
     bash(1)
 
 IMPLEMENTATION
-    Copyright (C) 2024 Free Software Foundation, Inc.
+    Copyright (C) 2025 Free Software Foundation, Inc.
 
 These shell commands are defined internally.  Type `help' to see this list.
 Type `help name' to find out more about the function `name'.
