@@ -35,10 +35,16 @@ j. Fixed a bug in command printing that output the wrong default file
 
 k. User-specified subshells (`(...)') now update BASH_COMMAND in the subshell.
 
-l. Fixed a bug with the `help -m' and loadable builtins.
+l. Fixed a display bug with the `help -m' and loadable builtins.
 
 m. Fixed a potential file descriptor leak when trying to use a pipe for a
    here document.
+
+n. Fix a bug with multiple assignment statements preceding a simple command
+   containing nofork comsubs.
+
+o. Fix a potential bug that could result in a NULL buffered stream even with
+   a valid input file descriptor.
 
 2. Changes to Readline
 
